dist/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, August 24th 2020</description>
        <formula>Cohort__r.Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancellationReason__c</fullName>
        <description>Created by Oscar @ Impact Box, 11/08/2020</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cancellation_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CreatedByCurrentUser__c</fullName>
        <formula>IF(  CreatedBy.Id  = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>End time stored as Date/time for purposes of lightning flow</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>This field will be used in the community to display the cohort name, but take the User to the Session record</description>
        <formula>HYPERLINK(&quot;https://impactbox-tutortrust.cs81.force.com/s/detail/&quot;&amp;Id,  Cohort__r.CohortName__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a record as Migrated from legacy systems. Oscar Mawby @ Impact box 22/01/20</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PupilAbsences__c</fullName>
        <description>Counts pupils absent from the session

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>Counts pupils absent from the session</inlineHelpText>
        <label>Pupil Absences</label>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PupilAttendancesScheduledCompleted__c</fullName>
        <description>Oscar Mawby @ Impact Box 06/01/2020</description>
        <label>Pupil Attendances Scheduled/Completed</label>
        <summaryFilterItems>
            <field>Attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PupilAttendances__c</fullName>
        <description>Counts the number of pupils present at each session

Counts the number of attendances where child did attend</description>
        <inlineHelpText>Counts the number of pupils present at each session</inlineHelpText>
        <label>Pupil Attendances</label>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RegisterCompleted__c</fullName>
        <inlineHelpText>The date on which the Register was last updated</inlineHelpText>
        <label>Register Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegisterName__c</fullName>
        <formula>&quot;Register: &quot;&amp; 
TEXT(DAY(SessionDate__c))&amp;&quot;/&quot;&amp;
TEXT(MONTH(SessionDate__c))&amp;&quot;/&quot;&amp;
TEXT(YEAR(SessionDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <formula>&quot;Click Here&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Cohort__r.Opportunity__r.School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>If this is checked the Tutor will not be paid for this session and the school will not be charged. It will also be excluded from attendance reporting.</inlineHelpText>
        <label>Session Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>The date the session is scheduled for/took place.</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SessionLengthHours__c</fullName>
        <description>Oscar Mawby @ Impact Box 30/12/19</description>
        <formula>(Hour(  TIMEVALUE(EndDateTime__c)  ) - Hour(  TIMEVALUE(StartDateTime__c)  )) + ((Minute(TIMEVALUE(EndDateTime__c)) - Minute(TIMEVALUE(StartDateTime__c)))/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as a decimal e.g. 1.5 hours = 1 hour, 30 minutes</inlineHelpText>
        <label>Session Length (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionMigrationNumber__c</fullName>
        <description>Built for purposes of data migration, Oscar Mawby @ Impact box 22/01/20</description>
        <label>Session Migration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionName__c</fullName>
        <description>Will return the account name and session date an populate actual record name via process builder (session initiator)

Oscar Mawby @ Impact Box 13/12/19</description>
        <formula>LEFT(Tutor__r.TutorFullName__c,40) &amp; &quot; &quot; &amp; LEFT(   Cohort__r.Opportunity__r.School__r.Name   ,40) &amp; &quot; &quot; &amp; TEXT(DAY(SessionDate__c))&amp;&quot;/&quot;&amp;TEXT(MONTH(SessionDate__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(SessionDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionNotes__c</fullName>
        <description>Any notes that a tutor wants to add regarding the session</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SessionType__c</fullName>
        <description>Created by Oscar @ Impact Box, 15/07/2020</description>
        <inlineHelpText>In what way will the session be delivered?</inlineHelpText>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                    <default>true</default>
                    <label>In Person</label>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>Start time stored as Date/Time to allow for population via flow</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <formula>TIMEVALUE(StartDateTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starts</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TotalPupilDosage__c</fullName>
        <formula>SessionLengthHours__c *  PupilAttendances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pupil Dosage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <label>Tutor</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>RegisterCompleted__c</columns>
        <columns>PupilAttendancesScheduledCompleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_by_Me_Today</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>SessionLengthHours__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>PupilAttendancesScheduledCompleted__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CreatedByCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Created by Me Today</label>
    </listViews>
    <listViews>
        <fullName>Leeds_Sessions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <label>Leeds Sessions</label>
    </listViews>
    <listViews>
        <fullName>Liverpool_Sessions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Liverpool</value>
        </filters>
        <label>Liverpool Sessions</label>
    </listViews>
    <listViews>
        <fullName>Manchester_Sessions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Greater Manchester</value>
        </filters>
        <label>Manchester Sessions</label>
    </listViews>
    <listViews>
        <fullName>My_Sessions_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>SessionDate__c</columns>
        <columns>SessionLengthHours__c</columns>
        <columns>PupilAttendancesScheduledCompleted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CreatedByCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sessions Created by Me Today</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cancellation_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( SessionCancelled__c, ISBLANK(TEXT( CancellationReason__c )))</errorConditionFormula>
        <errorDisplayField>CancellationReason__c</errorDisplayField>
        <errorMessage>Please provide a cancellation reason</errorMessage>
    </validationRules>
</CustomObject>